<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/frag_workout">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/workout_type" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
android:textSize="15dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/level" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textSize="14dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="12dp"
            android:paddingLeft="18dp"
            android:gravity="center"
            android:text="@string/muscle_group" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="12dp"
            android:paddingStart="30dp"
            android:gravity="center"
            android:text="@string/time" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/sets" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_weight="0.5"
            android:paddingLeft="7dp"
            android:gravity="left"
            android:text="@string/reps" />

    </LinearLayout>

<ListView
    android:layout_width="match_parent"
    android:id="@+id/list"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:layout_height="match_parent"/>

</RelativeLayout>