<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/lightPink"
    android:paddingHorizontal="30dp"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/healthy"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_health_studio"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="35dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_your_email"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingLeft="60dp"
            android:background="@drawable/rectangular_shape"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/email" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            >
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_your_password"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingLeft="60dp"
            android:background="@drawable/rectangular_shape"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/pass"
            />

    </RelativeLayout>

    <CheckBox
        android:layout_marginTop="5dp"
        android:text="@string/remember_username_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox"
        />
    <Button
        android:id="@+id/signin_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#A11545"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_haven_t_account"
            android:textColor="@color/white"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>