<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment"
    android:id="@+id/frag_home">

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textview"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dmy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/day" />

    <TextView
        android:id="@+id/todayworkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/today_workout"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <ListView
        android:id="@+id/lv_today_workouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/holo_green_light"
        android:dividerHeight="4dp"
        app:layout_constraintTop_toBottomOf="@+id/todayworkout" />

        <TextView
            android:id="@+id/todaymeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/your_today_meals"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_water" />

    <TextView
        android:id="@+id/tv_nbcalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/todaycalories"
        app:layout_constraintStart_toEndOf="@+id/todaycalories" />

    <TextView
        android:id="@+id/todaycalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_calories"
        android:textSize="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaymeals" />
    <ListView
            android:id="@+id/lv_today_meals"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="4dp"
            app:layout_constraintTop_toBottomOf="@+id/todaycalories"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fab_graphic"
          />
    <TextView
        android:id="@+id/tv_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/water_drank_today"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv_today_workouts"
        />

    <TextView
        android:id="@+id/tv_water_SP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/_0"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_water"
        app:layout_constraintStart_toEndOf="@id/tv_water"
        app:layout_constraintTop_toBottomOf="@id/lv_today_workouts" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glasses_of_water_250ml"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_water_SP"
        app:layout_constraintStart_toEndOf="@+id/tv_water_SP" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_graphic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lila"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profile_icon">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout >